# P1_project_minefield_pathfinding

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  flake.nix  garnix.yaml  settings.h
.github/workflows/: check.yml
src/: CMakeLists.txt  a_star.c  main.c  settings.h
src/combiner/: CMakeLists.txt  combiner.c  combiner.h
src/cost_projector/: valuation_functions.c
src/evaluation/: CMakeLists.txt  evaluation.c  evaluation.h
src/mapping/: CMakeLists.txt  kernel_density_estimation.c  kernel_density_estimation.h  mapping_functions.c  mapping_functions.h  read_print_terrain_map.c  read_print_terrain_map.h  terrain_map.c  terrain_map.h
src/pathfinding/: CMakeLists.txt  a_star.c  pathfinding.c  pathfinding.h
src/valuation/: CMakeLists.txt  valuation_functions.h
static/: hotspot_map.ppm  testmap.ppm
test/: CMakeLists.txt  README.md  function_tests.c  test_function.c  test_kernel_density_estimation.c  test_pathfinding.c
test/test_files/: kde_test_1.txt  output.txt
